--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Колесо удачи</h1>
+    <h1>Колесо от Ани</h1>
     <div class="wheel-container">
       <div class="arrow"></div>
       <canvas id="wheel" width="400" height="400"></canvas>
